# cake

./: .gitignore  CMakeLists.txt  build.sh
core/data/: CMakeLists.txt  data_rx.c
core/data/inc/: data_rx.h
main/: CMakeLists.txt  foo.c  main.c
main/inc/: foo.h  main.h
modules/: CMakeLists.txt
modules/data/: CMakeLists.txt  data.c  data_rx.c
modules/data/inc/: data.h  data_rx.h
modules/msg/: msg.c
modules/msg/inc/: msg.h
modules/text/: CMakeLists.txt  doc.c  document.c  text.c
modules/text/inc/: doc.h  document.h  text.h
msg/: CMakeLists.txt  msg.c
msg/inc/: msg.h
pool/: CMakeLists.txt  pool.c
pool/inc/: pool.h
schedule/: CMakeLists.txt  schedule.c
schedule/inc/: schedule.h
utils/: CMakeLists.txt  utils_list.c  utils_log.c
utils/inc/: utils_comm.h  utils_list.h  utils_log.h
